--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,14 @@
 
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
@@ -17,11 +25,51 @@ body {
     color: var(--main-color);
 }
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+h1,
+h2,
+h3,
+p,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+
+}
 
 /* Header */
 
+.page-header {
+    border: 1px solid #ececec;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.header-container {
+    align-items: center;
+    display: flex;
+}
 
 .logo {
+
+    margin-right: 93px;
+
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
@@ -38,7 +86,24 @@ body {
 
 .navigation-list {
     list-style: none;
+    display: flex;
 }
+
+.navigation-list li:not(:last-child) {
+    margin-right: 50px;
+}
+
+
+.contacts-list {
+    list-style: none;
+    display: flex;
+    margin-left: auto;
+}
+
+.contacts-list li:not(:first-child) {
+    margin-left: 50px;
+}
+
 
 .navigation-item {
     line-height: 1.14;
@@ -47,12 +112,13 @@ body {
     text-decoration: none;
 }
 
-.navigation-contact {
+.contacts-item {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--contacts-color);
     text-decoration: none;
 }
+
 
 .navigation-contact:focus,
 .navigation-contact:hover,
@@ -67,11 +133,20 @@ body {
 
 /* Main index.html */
 
+
+
+
 .hero {
-    background-color: var(--background-color)
+    background-color: var(--background-color);
+    padding-top: 200px;
+    padding-bottom: 200px;
+    text-align: center;
 }
 
 .hero-title {
+
+    margin-bottom: 30px;
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -82,6 +157,7 @@ body {
 }
 
 .hero-button {
+
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 16px;
@@ -103,11 +179,19 @@ body {
     background-color: var(--buttons-hover-color);
 }
 
+
 .features-list {
     list-style: none;
+    display: flex;
+}
+
+.features-item:not(:last-child) {
+    margin-right: 30px;
 }
 
 .features-subtitle {
+    margin-bottom: 10px;
+
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
@@ -121,7 +205,13 @@ body {
     color: var(--contacts-color);
 }
 
+.about {
+    padding-bottom: 94px;
+}
+
 .about-title {
+    margin-bottom: 50px;
+
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -131,13 +221,33 @@ body {
 
 .about-list {
     list-style: none;
+    display: flex;
+}
+
+.about-list li:not(:last-child) {
+    margin-right: 30px;
 }
 
 .team-list {
     list-style: none;
+    display: flex;
 }
 
+.team-list li {
+    background-color: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    text-align: center;
+}
+
+.team-list li:not(:last-child) {
+    margin-right: 30px;
+}
+
+
 .team-title {
+    margin-bottom: 50px;
+
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -145,7 +255,13 @@ body {
     letter-spacing: 0.03em;
 }
 
+.member-photo {
+    margin-bottom: 30px;
+}
+
 .member-name {
+    margin-bottom: 10px;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -153,6 +269,8 @@ body {
 }
 
 .member-job {
+    margin-bottom: 30px;
+
     font-weight: 400;
     font-size: 16px;
     line-height: 1.18;
@@ -216,9 +334,14 @@ body {
 
 .page-footer {
     background-color: var(--background-color);
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer-logo {
+    display: inline-block;
+    margin-bottom: 20px;
+
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
@@ -230,6 +353,10 @@ body {
 
 .footer-list {
     list-style: none;
+}
+
+.footer-list li:not(:last-child) {
+    margin-bottom: 9px;
 }
 
 .footer-location {
