--- a/css/styles.css
+++ b/css/styles.css
@@ -120,8 +120,8 @@ ul {
 }
 
 
-.navigation-contact:focus,
-.navigation-contact:hover,
+.navigation-item:focus,
+.navigation-item:hover,
 .contacts-item:focus,
 .contacts-item:hover {
     color: var(--hover-color)
@@ -144,7 +144,6 @@ ul {
 }
 
 .hero-title {
-
     margin-bottom: 30px;
 
     font-weight: 900;
@@ -157,6 +156,7 @@ ul {
 }
 
 .hero-button {
+    padding: 10px 32px;
 
     font-family: 'Roboto';
     font-weight: 700;
@@ -165,13 +165,11 @@ ul {
     text-align: center;
     letter-spacing: 0.06em;
     color: var(--accessory-color);
-    width: 216px;
-    height: 50px;
     background-color: var(--hover-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
-    border: none;
+    border: transparent;
 }
 
 .hero-button:hover,
@@ -282,9 +280,18 @@ ul {
 
 .filter-list {
     list-style: none;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.filter-list li:not(:last-child) {
+    margin-right: 8px;
 }
 
 .filter-button {
+    padding: 5px 25px;
+
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 16px;
@@ -298,6 +305,8 @@ ul {
     cursor: pointer;
 }
 
+
+
 .filter-button:focus,
 .filter-button:hover {
     color: var(--accessory-color);
@@ -308,13 +317,23 @@ ul {
 
 .product-list {
     list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
+
 
 .product-item {
     text-decoration: none;
+
+}
+
+.product-item img {
+    margin-bottom: 20px;
 }
 
 .product-title {
+    margin-bottom: 4px;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
@@ -322,6 +341,7 @@ ul {
 }
 
 .product-text {
+    padding-bottom: 20px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
