--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,7 @@ ul {
 
 .product-title {
     margin-bottom: 4px;
+    padding-left: 24px;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
@@ -342,6 +343,7 @@ ul {
 
 .product-text {
     padding-bottom: 20px;
+    padding-left: 24px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
